--- a/.spellcheck.yaml
+++ b/.spellcheck.yaml
@@ -1,8 +1,7 @@
-spellchecker: hunspell
-
 matrix:
 - name: Spellcheck
-  hunspell:
+  aspell:
+    lang: en
     d: en_US
   sources:
   - '**/*.tex'
