--- a/.github/workflows/spellcheck-action.yaml
+++ b/.github/workflows/spellcheck-action.yaml
@@ -47,3 +47,5 @@ jobs:
           if [[ extension == ".tex" ]]; then
             pdflatex $changed_file
             python spellcheck.py $changed_file
+          fi
+        done
