--- a/.github/workflows/spellcheck-action.yaml
+++ b/.github/workflows/spellcheck-action.yaml
@@ -40,7 +40,8 @@ jobs:
 
     - name: Spell and Compile Check
       uses: jitterbit/get-changed-files@v1
-      run: |
+      
+    - run: |
         for changed_file in ${{ steps.files.outputs.all }}; do
           filename=$(basename -- "$changed_file")
           extension="${filename##*.}"
