--- a/.github/workflows/spellcheck-action.yaml
+++ b/.github/workflows/spellcheck-action.yaml
@@ -44,9 +44,9 @@ jobs:
         for changed_file in ${{ steps.files.outputs.all }}; do
           filename=$(basename -- "$changed_file")
           extension="${filename##*.}"
+          echo $extension
           if [[ extension == ".tex" ]]; then
             # pdflatex $changed_file
             python spellcheck.py $changed_file
-            echo "Spell check result: $?"
           fi
         done
