--- a/.github/workflows/spellcheck-action.yaml
+++ b/.github/workflows/spellcheck-action.yaml
@@ -44,7 +44,7 @@ jobs:
         for changed_file in ${{ steps.files.outputs.all }}; do
           filename=$(basename -- "$changed_file")
           extension="${filename##*.}"
-          if [[ extension == "tex" ]]; then
+          if [[ $extension == "tex" ]]; then
             # pdflatex $changed_file
             python spellcheck.py $changed_file
             echo "result: $?"
