--- a/src/athena/package.json
+++ b/src/athena/package.json
@@ -6,27 +6,40 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "rm -rf node_modules/react-native-body-highlighter/node_modules/react-native-svg",
+    "gen": "graphql-codegen",
+    "prestart": "npm run gen",
+    "predev": "npm run gen"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@graphql-codegen/typescript-operations": "^2.5.6",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.9",
     "expo-haptics": "~11.3.0",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.2.9",
+    "graphql": "^15.8.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-body-highlighter": "^2.1.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
+    "react-native-ui-lib": "^6.23.1",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@graphql-codegen/cli": "^2.13.11",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "typescript": "~4.3.5"
