--- a/src/hermes/package.json
+++ b/src/hermes/package.json
@@ -32,11 +32,16 @@
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@graphql-codegen/client-preset": "1.1.3",
+    "@graphql-codegen/introspection": "2.2.1",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
-    "typescript": "^4.8.4",
-    "@graphql-codegen/introspection": "2.2.1",
-    "@graphql-codegen/client-preset": "1.1.3"
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
+    "eslint-plugin-react": "^7.31.10",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   }
 }
