--- a/src/athena/package.json
+++ b/src/athena/package.json
@@ -11,7 +11,7 @@
     "gen": "graphql-codegen",
     "prestart": "npm run gen",
     "predev": "npm run gen",
-    "prepare": "cd ../.. && husky install athena/.husky"
+    "prepare": "cd ../../ && husky install .husky"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -48,7 +48,8 @@
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
-    "husky": "^8.0.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
     "pretty-quick": "^3.1.3",
     "typescript": "~4.3.5"
   },
