--- a/src/athena/.eslintrc.yml
+++ b/src/athena/.eslintrc.yml
@@ -13,4 +13,7 @@ parserOptions:
 plugins:
   - react
   - '@typescript-eslint'
-rules: {}
+rules: {
+  "react/jsx-uses-react": "off",
+  "react/react-in-jsx-scope": "off"
+}
