--- a/src/athena/.eslintrc.yml
+++ b/src/athena/.eslintrc.yml
@@ -15,5 +15,6 @@ plugins:
   - '@typescript-eslint'
 rules: {
   "react/jsx-uses-react": "off",
-  "react/react-in-jsx-scope": "off"
+  "react/react-in-jsx-scope": "off",
+  "@typescript-eslint/ban-ts-comment": "off"
 }
