adds heading, subheading, and screen view components

--- a/src/athena/tsconfig.json
+++ b/src/athena/tsconfig.json
@@ -2,7 +2,12 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strictNullChecks": true,
+    "noImplicitReturns": true
   },
   "exclude": ["node_modules"]
 }
