--- a/src/athena/.eslintrc.yml
+++ b/src/athena/.eslintrc.yml
@@ -21,4 +21,5 @@ rules:
     '@typescript-eslint/no-empty-function': 'off',
     '@typescript-eslint/no-empty-interface': 'off',
     'react/jsx-key': 'warn',
+    'react/prop-types': 'off',
   }
