eslint fix w props, properly sets pages on tab navigator, adds programs page

--- a/src/athena/.eslintrc.yml
+++ b/src/athena/.eslintrc.yml
@@ -21,6 +21,6 @@ rules:
     '@typescript-eslint/no-empty-function': 'off',
     '@typescript-eslint/no-empty-interface': 'off',
     'react/jsx-key': 'warn',
-    'react/prop-types': ['error', { 'ignore': ['navigation'] }],
-    'react/no-unescaped-entities': 'warn'
+    'react/prop-types': 'off',
+    'react/no-unescaped-entities': 'warn',
   }
