--- a/src/hermes/package.json
+++ b/src/hermes/package.json
@@ -10,7 +10,7 @@
     "watch": "npx tsc --watch",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only src/server/schema",
+    "generate:nexus": "ts-node --transpile-only src/server/schema/makeSchema.ts",
     "migrate": "npx prisma migrate dev --name init",
     "studio": "npx prisma studio",
     "prepare": "cd ../../ && husky install .husky"
