--- a/src/athena/package.json
+++ b/src/athena/package.json
@@ -57,7 +57,7 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "pretty-quick": "^3.1.3",
-    "react-native-svg-transformer": "^1.0.0",
+    "react-native-svg-transformer": "0.14.0",
     "typescript": "~4.3.5"
   },
   "peerDependencies": {
