--- a/src/athena/package.json
+++ b/src/athena/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
