--- a/src/hermes/.eslintrc.yml
+++ b/src/hermes/.eslintrc.yml
@@ -6,11 +6,15 @@ extends:
   - plugin:react/recommended
   - plugin:@typescript-eslint/recommended
 overrides: []
-parser: "@typescript-eslint/parser"
+parser: '@typescript-eslint/parser'
+ignorePatterns:
+  - dist/
+  - src/lib/types/nexus.ts
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 plugins:
   - react
-  - "@typescript-eslint"
-rules: {}
+  - '@typescript-eslint'
+rules:
+  '@typescript-eslint/no-unused-vars': 'off'
