--- a/src/hermes/package.json
+++ b/src/hermes/package.json
@@ -13,7 +13,8 @@
     "generate:nexus": "ts-node --transpile-only src/server/schema/makeSchema.ts",
     "migrate": "npx prisma migrate dev --name init",
     "studio": "npx prisma studio",
-    "prepare": "cd ../../ && husky install .husky"
+    "prepare": "cd ../../ && husky install .husky",
+    "test": "jest"
   },
   "author": "Dimitri Tsampiras",
   "license": "ISC",
@@ -40,6 +41,7 @@
     "@graphql-codegen/client-preset": "1.1.3",
     "@graphql-codegen/introspection": "2.2.1",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
@@ -47,8 +49,10 @@
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
     "husky": "^8.0.2",
+    "jest": "^29.5.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.8.4"
   }
 }
