--- a/src/athena/package.json
+++ b/src/athena/package.json
@@ -27,7 +27,6 @@
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
     "graphql": "^15.8.0",
-    "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -42,6 +41,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^12.3.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-ui-lib": "^6.23.1",
     "react-native-web": "~0.18.7",
     "yup": "^0.32.11"
