--- a/src/hermes/tsconfig.json
+++ b/src/hermes/tsconfig.json
@@ -23,6 +23,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/types/nexus.ts"],
   "include": ["src"]
 }
